--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_map: ^8.1.1
   firebase_auth: ^5.5.1
+  cloud_firestore: ^5.6.5
+  firebase_core: ^3.12.1
 
 dev_dependencies:
   flutter_test:
