--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_auth: ^5.5.1
   cloud_firestore: ^5.6.5
   firebase_core: ^3.12.1
+  latlong2: ^0.9.1
 
 dev_dependencies:
   flutter_test:
