--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   cloud_firestore: ^5.6.5
   firebase_core: ^3.12.1
   latlong2: ^0.9.1
+  image_picker: ^1.1.2
+  http: ^1.3.0
 
 dev_dependencies:
   flutter_test:
