--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   latlong2: ^0.9.1
   image_picker: ^1.1.2
   http: ^1.3.0
+  geolocator: ^14.0.0
 
 dev_dependencies:
   flutter_test:
